--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,15 @@ code {
     monospace;
 }
 
-#container {
-  width: 500px;
-  height: 500px;
-  border: 1px solid black;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  padding: 30px;
+footer {
+  position: absolute;
+  bottom: 0;
+  height: 50px;
+  background-color: rgb(27, 26, 26);
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  letter-spacing: 2px;
 }
